dataset1235/2025-2/2318198438/users/367011683/executions/1897677159_1927446959.log
== SUBMISSION (2025-08-26 17:29:48)
-- CODE: 
n = float(input("Digite o valor original: "))
x = float(input("Digite a porcentagem de desconto: "))
desconto = n * (x / 100)
valor_final = n - desconto
print(f"Valor do desconto: {desconto}")
print(f"Valor final: {valor_ final}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 6
    (valor_ final)
     ^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 21:37:33)
-- CODE: 
n = float(input())
valor1 = round(n * 0.27, 2)
valor2 = round(n * (1 + 0.42), 2)
valor3 = round(n * (1 - 0.63), 2)
print(valor1)
print(valor2)
print(valor3)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
